[B][COLOR red]Update - v3.7.2 - May 30, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new TVDB api key selection between 3 possible
    keys.  It was discovered today that some keys seem to
    drop random shows loading a season list, and that
    happens rarely in itself.  This server anomaly eventually
    clears up in a day or so but flipping to a different key
    seems to also cure the problem more immediate for
    those that can no wait.[/I]

[B][COLOR red]Update - v3.7.1 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Set tmdb to str() in tmdb module. This broke setting
    the new .setProperty('tmdb_id', tmdb). Can not be an int().[/I]

[B][COLOR red]Update - v3.7.0 - May 29, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Increased Find Similar list to 20 items vs. 10.[/I]
[COLOR yellow]--[/COLOR][I] Removed tagline for shows.[/I]
[COLOR yellow]--[/COLOR][I] Added missing clearlogo and clearart at season level.[/I]
[COLOR yellow]--[/COLOR][I] Unwatched count now only added to multi episode
    lists like Progress and Calendar.[/I]
[COLOR yellow]--[/COLOR][I] Added .setProperty(tmdb_id) for episodes and
    .setProperty(tvshow.tmdb_id) for shows for TMDBHelper
    support of lookup.[/I]
[COLOR yellow]--[/COLOR][I] Fixed bookmark issue mismatch in databse.[/I]

[B][COLOR red]Update - v3.6.9 - May 20, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Added new source filtering option "File Size limit (GB)".
    This is off by default.[/I]
[COLOR yellow]--[/COLOR][I] Fixed random case of fetching foreign landscape
    from fanart.tv.[/I]

[B][COLOR red]Update - v3.6.8 - May 17, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed random issue with busy dialog not closing.[/I]
[COLOR yellow]--[/COLOR][I] Added database table check to avoid bogus log errors.[/I]
[COLOR yellow]--[/COLOR][I] Fixed issue if user cleared Provider cache and then
    selected Rescrape the table was now empty and halted scrapping.[/I]