@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="3.7.2" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="3.7.3" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -34,14 +34,9 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v3.7.2 - May 30, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Added new TVDB api key selection between 3 possible
-    keys.  It was discovered today that some keys seem to
-    drop random shows loading a season list, and that
-    happens rarely in itself.  This server anomaly eventually
-    clears up in a day or so but flipping to a different key
-    seems to also cure the problem more immediate. So
-    for you impatient types jumping on reddit I offer this fix.[/I]
+[B][COLOR red]Update - v3.7.3 - May 31, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed issue where if fanart.tv was disabled it prevented
+    loading of seasons list.[/I]
 		</news>
 	</extension>
 </addon>
