@@ -1,3 +1,7 @@
+[B][COLOR red]Update - v3.7.3 - May 31, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Fixed issue where if fanart.tv was disabled it prevented
+    loading of seasons list.[/I]
+
 [B][COLOR red]Update - v3.7.2 - May 30, 2020[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Added new TVDB api key selection between 3 possible
     keys.  It was discovered today that some keys seem to
